--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <app-root></app-root>
-  <script src="https://maps.googleapis.com/maps/api/js?key=KEY"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFrtZcMguxfL8TsCau5pwhWNI5NXxCQaI&callback=initMap" async defer></script>
 </body>
 
 </html>
